# Audio-Emotion-Analysis

./: .gitignore  .replit  README.md  TROUBLESHOOTING.md  VSCODE_SETUP.md  app.py  audio_processor.py  models.py  pyproject.toml  requirements_for_vscode.txt  run.py  setup_vscode.py
attached_assets/: Pasted-error-subprocess-exited-with-error-Getting-requirements-to-build-wheel-did-not-run-success-1746478193851.txt
instance/: audio_emotions.db
static/css/: style.css
static/js/: main.js
templates/: history.html  index.html  layout.html  results.html
uploads/: .gitkeep
