[project]
name = "audio-emotion-detector"
version = "0.1.0"
description = "Flask web application for intelligent audio analysis, utilizing machine learning techniques to detect emotions and age from audio samples"
requires-python = ">=3.8"
dependencies = [
    "email-validator>=2.0.0",
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "gunicorn>=21.0.0",
    "joblib>=1.3.0",
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
